--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "daisyui": "^2.51.6",
     "firebase": "^9.22.0",
     "localforage": "^1.10.0",
@@ -18,6 +19,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-tabs": "^6.0.1",
+    "react-text-transition": "^3.1.0",
+    "react-type-animation": "^3.1.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
